# python-pvqd

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  timing.csv
src/pvqd/: __init__.py
tests/: conftest.py  test_all.py
