[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvqd"
description = "Voice Foundation Pathological Voice Quality Database Reader module"
readme = "README.rst"
keywords = ["multimedia"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.6"
dependencies = ["pandas", "numpy", "openpyxl"]

[project.urls]
Repository = "https://github.com/tikuma-lsuhsc/python-pvqd/issues"
Issues = "https://github.com/tikuma-lsuhsc/python-pvqd/issues"
Pull_Requests = "https://github.com/tikuma-lsuhsc/python-pvqd/pulls"

[tool.setuptools.dynamic]
version = { attr = "pvqd.__version__" }
